--- a/styles/Styles.css
+++ b/styles/Styles.css
@@ -1,3 +1,8 @@
+@import url(../styles/bergen.css);
+@import url(../styles/controls.css);
+@import url(../styles/explosie.css);
+@import url(../styles/raket.css);
+
 * {
 	margin: 0;
 	padding: 0;
@@ -20,467 +25,11 @@ main {
 	background: var(--lucht-achtergrond);
 	font-family: 'Montserrat Alternates', sans-serif;
 }
-main h1 {
-	color: #fff;
-	position: absolute;
-	font-size: 1.5em;
-	top: 2vh;
-	z-index: 100;
-}
-main h1:nth-of-type(1) {
-	left: var(--button-positie-left);
-}
-main h1:nth-of-type(2) {
-	position: relative;
-	text-align: center;
-}
-main > input[type="checkbox"] {
-	display: none;
-}
-main > input[type="radio"] {
-	display: none;
-}
-main > label {
-	border: .2em solid #fff;
-	position: absolute;
-	top: var(--button-positie-top);
-	border-radius: 50%;
-	cursor: pointer;
-	z-index: 100;
-	height: 2.5em;
-	width: 2.5em;
-	transition: 1s;
-}
-main > label section:hover {
-	animation: fireEngine .20s ease-in infinite;
-}
-main > label[for="bom"] {
-	background: red;
-	left: calc(50% - 1.25em);
-}
-main > label[for="raket-k1"] {
-	background: #01BF8F;
-	left: calc(var(--button-positie-left));
-}
-main > label[for="raket-k2"] {
-	background: #40EEF9;
-	left: calc(var(--button-positie-left) + 5vw);
-}
-main > label[for="raket-k3"] {
-	background: #FF5669;
-	left: calc(var(--button-positie-left) + 10vw);
-}
-main > label[for="raket-k4"] {
-	background: linear-gradient(90deg, rgba(127,124,179,1) 0%, rgba(246,168,96,1) 26%, rgba(255,135,229,1) 52%, rgba(121,190,128,1) 80%, rgba(0,212,255,1) 100%);
-	left: calc(var(--button-positie-left));
-	top: calc(var(--button-positie-top) + 7vh);
-}
-main > label[for="raket-k5"] {
-	background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(193,228,189,1) 39%, rgba(222,200,180,1) 64%, rgba(208,183,188,1) 83%, rgba(148,187,233,1) 100%);
-	left: calc(var(--button-positie-left) + 5vw);
-	top: calc(var(--button-positie-top) + 7vh);
-}
-main > label[for="raket-k6"] {
-	background: linear-gradient(90deg, rgba(180,58,153,1) 0%, rgba(253,201,29,1) 50%, rgba(205,252,69,1) 100%);;
-	left: calc(var(--button-positie-left) + 10vw);
-	top: calc(var(--button-positie-top) + 7vh);
-}
-main input:nth-of-type(1):checked ~ section, main input:nth-of-type(1):checked ~ ul:first-of-type li, main input:nth-of-type(1):checked ~ section:nth-of-type(1) ul li, main input:nth-of-type(1):checked ~ ul:nth-of-type(2) li {
-    animation-play-state: running;
-}
-main input:nth-of-type(1):checked ~ label[for="bom"] {
-    border: .4em solid #fff;
-}
-main input:nth-of-type(2):checked ~ label[for="raket-k1"] {
-    border: .4em solid #fff;
-}
-main input:nth-of-type(3):checked ~ label[for="raket-k2"] {
-    border: .4em solid #fff;
-}
-main input:nth-of-type(4):checked ~ label[for="raket-k3"] {
-    border: .4em solid #fff;
-}
-main input:nth-of-type(5):checked ~ label[for="raket-k4"] {
-    border: .4em solid #fff;
-}
-main input:nth-of-type(6):checked ~ label[for="raket-k5"] {
-    border: .4em solid #fff;
-}
-main input:nth-of-type(7):checked ~ label[for="raket-k6"] {
-    border: .4em solid #fff;
-}
-main input:nth-of-type(2):checked ~ section {
-    --raket-kleur: #01BF8F;
-}
-main input:nth-of-type(3):checked ~ section {
-    --raket-kleur: #40EEF9;
-}
-main input:nth-of-type(4):checked ~ section {
-    --raket-kleur: #FF5669;
-}
-main input:nth-of-type(5):checked ~ section {
-    --raket-kleur: linear-gradient(90deg, rgba(127,124,179,1) 0%, rgba(246,168,96,1) 26%, rgba(255,135,229,1) 52%, rgba(121,190,128,1) 80%, rgba(0,212,255,1) 100%);
-}
-main input:nth-of-type(6):checked ~ section {
-    --raket-kleur: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(193,228,189,1) 39%, rgba(222,200,180,1) 64%, rgba(208,183,188,1) 83%, rgba(148,187,233,1) 100%);
-}
-main input:nth-of-type(7):checked ~ section {
-    --raket-kleur: linear-gradient(90deg, rgba(180,58,153,1) 0%, rgba(253,201,29,1) 50%, rgba(205,252,69,1) 100%);
-}
 main ul li {
 	list-style-type: none;
 }
-/* Geinspireerd door; https://codepen.io/shooft/pen/QWOaMjJ met dan aan Sanne */
-main > ul:first-of-type li:nth-of-type(1) {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	background-color: none;
-	background-image: conic-gradient( at 40% top, transparent 130deg, var(--berg-achtergrond1) 124deg 225deg, transparent 225deg);
-	background-size: 200vw 50vh;
-	background-repeat: no-repeat;
-	animation: achtergrond 10.6s linear 1;
-	animation-play-state: paused;
-	background-position: -20vw bottom;
-}
-main > ul:first-of-type li:nth-of-type(2) {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	background-color: none;
-	background-image: conic-gradient( at 40% top, transparent 124deg, var(--berg-achtergrond2) 124deg 225deg, transparent 225deg);
-	background-size: 200vw 35vh;
-	background-repeat: no-repeat;
-	animation: achtergrond2 10.6s linear 1;
-	animation-play-state: paused;
-	background-position: -40vw bottom;
-}
-main > ul:first-of-type li:nth-of-type(3) {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	background-color: none;
-	background-image: conic-gradient( at 45% top, transparent 135deg, var(--berg-achtergrond3) 124deg 225deg, transparent 225deg);
-	background-size: 200vw 20vh;
-	background-repeat: no-repeat;
-	animation: achtergrond3 10.6s linear 1;
-	animation-play-state: paused;
-	background-position: -70vw bottom;
-}
-main > section:nth-of-type(1) {
-	position: absolute;
-	width: clamp(13rem, 20vw, 18rem); 
-	height: clamp(4rem, 13vh, 35rem);
-	background: var(--raket-kleur);
-	top: 30vh;
-	left: calc(50% - 11vw);
-	border-radius: 0% 70% 60% 0% / 70% 70%;
-	animation: firework 10s 1 ease-in-out;
-	animation-play-state: paused;
-	visibility: hidden;
-	transition: .5s;
-}
-main > section:nth-of-type(1)::before {
-	position: absolute;
-	content: "";
-	background-color: var(--raket-kleur-achter);
-	height: clamp(4rem, 13vh, 35rem);
-	width: 2em;
-	left: 0;
-	z-index: 20;
-}
-main > section:nth-of-type(1) ul{
-	position: relative;
-	transform: rotate(220deg);
-	transform-origin: 4em;
-}
-/* Geinspireerd door; https://redstapler.co/easy-realistic-css-fire-effect/ */
-main > section:nth-of-type(1) ul li{
-	position: absolute;
-	bottom: 4em;
-	left: 4em;
-	border-radius: 50% 0 50% 0;
-}
-main > section:nth-of-type(1) ul li:nth-of-type(1){
-	height: clamp(5rem, 14vh, 35rem);
-	width: 7em;
-	background-color: orangered;
-	animation: fireEngine .15s ease-in infinite;
-	animation-play-state: paused;
-}
-main > section:nth-of-type(1) ul li:nth-of-type(2){
-	height: clamp(4rem, 12vh, 35rem);
-	width: 6em;
-	background-color: orange;
-	animation: fireEngine .20s ease-in infinite;
-	animation-play-state: paused;
-}
-main > section:nth-of-type(1) ul li:nth-of-type(3){
-	height: clamp(3rem, 10vh, 35rem);
-	width: 5em;
-	background-color: gold;
-	animation: fireEngine .10s ease-in infinite;
-	animation-play-state: paused;
-}
-main > section:nth-of-type(1) ul li:nth-of-type(4){
-	height: clamp(3rem, 8vh, 35rem);
-	width: 4em;
-	background-color: lightyellow;
-	animation: fireEngine .15s ease-in infinite;
-	animation-play-state: paused;
-}
 main > ul:nth-of-type(2) li {
 	visibility: hidden;
-}
-main > ul:nth-of-type(2) li:nth-of-type(1) {
-	width: 5em;
-	height: 5em;
-	background-color: rgba(255, 78, 157, 0.4);
-	border-radius: 50%;
-	position: absolute;
-	left: calc(45% - 2.5em);
-	bottom: -5em;
-	animation: explosion 2s 1 9s ease-in-out;
-	animation-play-state: paused;
-}
-main > ul:nth-of-type(2) li:nth-of-type(2) {
-	width: 5em;
-	height: 5em;
-	background-color: rgba(195, 222, 66, 0.4);
-	border-radius: 50%;
-	position: absolute;
-	left: calc(55% - 2.5em);
-	bottom: -8em;
-	animation: explosion 2s 1 9s ease-in-out;
-	animation-play-state: paused;
-}
-main > ul:nth-of-type(2) li:nth-of-type(3) {
-	width: 5em;
-	height: 5em;
-	background-color: rgba(255, 160, 55, 0.4);
-	border-radius: 50%;
-	position: absolute;
-	left: calc(55% - 2.5em);
-	bottom: -8em;
-	animation: explosion 2s 1 8.85s ease-in-out;
-	animation-play-state: paused;
-}
-main > ul:nth-of-type(2) li:nth-of-type(4) {
-	width: 5em;
-	height: 5em;
-	background-color: rgba(0, 152, 163, 0.4);
-	border-radius: 50%;
-	position: absolute;
-	left: calc(50% - 2.5em);
-	bottom: -11em;
-	animation: explosion 2s 1 8.9s ease-in-out;
-	animation-play-state: paused;
-}
-main > ul:nth-of-type(2) li:nth-of-type(5) {
-	width: 5em;
-	height: 5em;
-	background-color: rgba(255, 255, 163, 0.4);
-	border-radius: 50%;
-	position: absolute;
-	left: calc(40% - 2.5em);
-	bottom: -11em;
-	animation: explosion 2s 1 8.95s ease-in-out;
-	animation-play-state: paused;
-}
-main > ul:nth-of-type(2) li:nth-of-type(6) {
-	width: 5em;
-	height: 5em;
-	background-color: rgba(255, 0, 163, 0.4);
-	border-radius: 50%;
-	position: absolute;
-	left: calc(35% - 2.5em);
-	bottom: -11em;
-	animation: babyFirework 1.75s 5 ease-in-out;
-	animation-play-state: paused;
-}
-main > ul:nth-of-type(2) li:nth-of-type(7) {
-	width: 5em;
-	height: 5em;
-	background-color: rgba(255, 135, 0, 0.4);
-	border-radius: 50%;
-	position: absolute;
-	left: calc(65% - 2.5em);
-	bottom: -16.5em;
-	animation: babyFirework 1.375s 6 .5s ease-in-out;
-	animation-play-state: paused;
-}
-@keyframes firework {
-	0% {
-		visibility: visible;
-		transform: translatey(0em);
-	}
-	10% {
-		transform: translatey(6em);
-	}
-	20% {
-		transform: translatey(0);
-	}
-	30% {
-		transform: translatey(6em);
-	}
-	40% {
-		transform: translatey(0);
-	}
-	50% {
-		transform: translatey(6em);
-	}
-	60% {
-		transform: translatey(0);
-	}
-	70% {
-		transform: translatey(6em);
-	}
-	80% {
-		transform: translatey(0);
-	}
-	92% {
-		transform: rotate(180deg) translatey(-100vh);
-	}
-	100% {
-		transform: rotate(180deg) translatey(-100vh);
-		visibility: hidden;
-	}
-}
-@keyframes achtergrond {
-	0% {
-		background-position: 0vw bottom;
-	}
-	77% {
-		background-position: -20vw bottom;
-	}
-	84% {
-		opacity: 1;
-	}
-	86.6% {
-		opacity: 0;
-	}
-	89.2% {
-		opacity: 1;
-	}
-	91.8% {
-		opacity: 0;
-	}
-	94.4% {
-		opacity: 1;
-	}
-	97% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
-	}
-}
-@keyframes achtergrond2 {
-	0% {
-		background-position: 0vw bottom;
-	}
-	77% {
-		background-position: -40vw bottom;
-	}
-	84% {
-		opacity: 1;
-	}
-	86.6% {
-		opacity: 0;
-	}
-	89.2% {
-		opacity: 1;
-	}
-	91.8% {
-		opacity: 0;
-	}
-	94.4% {
-		opacity: 1;
-	}
-	97% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
-	}
-}
-@keyframes achtergrond3 {
-	0% {
-		background-position: -10vw bottom;
-	}
-	77% {
-		background-position: -70vw bottom;
-	}
-	84% {
-		opacity: 1;
-	}
-	86.6% {
-		opacity: 0;
-	}
-	89.2% {
-		opacity: 1;
-	}
-	91.8% {
-		opacity: 0;
-	}
-	94.4% {
-		opacity: 1;
-	}
-	97% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
-	}
-}
-@keyframes explosion {
-	0% {
-		transform: 0;
-		visibility: visible;
-	}
-	30% {
-		transform:scale(50);	
-		filter: hue-rotate(10000000000000000000000000000000000deg) blur(.2em);	
-	}
-	100% {
-		transform:scale(50);
-		filter: hue-rotate(0);
-	}
-}
-@keyframes fireEngine {
-	0% {
-		transform: rotate(1deg);
-	}
-	20% {
-		transform: rotate(0deg) scaleY(1.05);
-	}
-	40% {
-		transform: rotate(1deg);
-	}
-	40% {
-		transform: rotate(0deg);
-	}
-	80% {
-		transform: rotate(1deg) scalex(0.90);
-	}
-	100% {
-		transform: rotate(0deg);
-	}
-}
-@keyframes babyFirework {
-	0% {
-		visibility: visible;
-		transform: scale(.3);
-	}
-	80% {
-		transform: scale(.3);
-		filter: hue-rotate(10000000000000000000000deg);
-	}
-	100% {
-		bottom: 25vh;
-		transform: scale(1.5) rotate3d(1, 1, 0, -360deg);
-		filter: hue-rotate(10000000000000000000000000000000000deg) blur(1em);	
-	}
 }
 @media only screen and (max-width: 900px) {
 	main h1 {
@@ -504,4 +53,4 @@ main > ul:nth-of-type(2) li:nth-of-type(7) {
 	main > label[for="raket-k6"] {
 		top: calc(var(--button-positie-top) + 35vh);
 	}
-  }
+}
